Added some variables

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
  <body>
 <h1 id="head"> </h1>
 <p id="paragraph"> </p>
+<p id="p1"> </p>
+<p id="p2"> </p>
 <script>
+    var a= 10
+    var name= "Sabu"
+    var b= 20
+    var sum= a+b
+    var mult=a*b
     document.getElementById("head").innerHTML="Introduction to JavaScript"
     document.getElementById("paragraph").innerHTML= 12
+    document.getElementById("p1").innerHTML= "the sum is" + sum
+    document.getElementById("p2").innerHTML="the product is" + mult
 </script>
 
 </body>
